--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,7 +62,43 @@
   * {
     @apply border-border;
   }
+
+  *::selection {
+    @apply bg-teal-700/50 text-white dark:bg-teal-500/50;
+  }
+
+  pre *::selection {
+    @apply bg-rose-500/50 text-white;
+  }
+
+  html {
+    @apply scroll-smooth;
+  }
+
   body {
     @apply flex min-h-screen flex-col bg-background font-sans antialiased;
+  }
+
+  @keyframes rotate {
+    from {
+      transform: rotateY(-90deg);
+      opacity: 0;
+    }
+    to {
+      transform: rotateY(0deg);
+      opacity: 1;
+    }
+  }
+
+  .rotate-out {
+    animation: rotate 0.5s backwards;
+  }
+
+  .rotate-in {
+    animation: rotate 0.5s forwards;
+  }
+
+  .logo-animation {
+    animation: rotate 0.5s backwards;
   }
 }
