--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,6 +71,11 @@
     @apply bg-rose-500/50 text-white;
   }
 
+  pre,
+  code {
+    font-family: GeistMono, ui-monospace, SFMono-Regular, Roboto Mono, Menlo, Monaco, Liberation Mono, DejaVu Sans Mono, Courier New, monospace !important;
+  }
+
   html {
     @apply scroll-smooth;
   }
