--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,7 +61,7 @@
 
 @layer base {
   * {
-    @apply border-border scrollbar-thin scrollbar-thumb-zinc-300;
+    @apply border-border scrollbar-thin scrollbar-thumb-zinc-300 outline-ring/50;
   }
 
   *::selection {
@@ -97,7 +97,7 @@
   }
 
   body {
-    @apply flex min-h-screen flex-col bg-background font-sans antialiased;
+    @apply bg-background text-foreground flex min-h-screen flex-col font-sans antialiased;
   }
 
   @keyframes rotate {
@@ -121,14 +121,5 @@
 
   .logo-animation {
     animation: rotate 0.5s backwards;
-  }
-}
-
-@layer base {
-  * {
-    @apply border-border outline-ring/50;
-  }
-  body {
-    @apply bg-background text-foreground;
   }
 }
