--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,44 +8,44 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
-  --base-50: oklch(0.9866 0.0021 197.12);
-  --base-100: oklch(0.9685 0.0023 198.15);
-  --base-200: oklch(0.9274 0.0029 198.68);
-  --base-300: oklch(0.869 0.0034 199.86);
-  --base-400: oklch(0.7054 0.0038 201.93);
-  --base-500: oklch(0.5537 0.0041 202.89);
-  --base-600: oklch(0.4455 0.004 203.22);
-  --base-700: oklch(0.3725 0.0037 202.93);
-  --base-800: oklch(0.276 0.0032 203.57);
-  --base-900: oklch(0.2102 0.0029 204.76);
-  --base-950: oklch(0.1339 0.0027 204.95);
-  --base-1000: oklch(0.0846 0.0025 205.33);
+  --base-50: oklch(0.9914 0.0043 246.02);
+  --base-100: oklch(0.968 0.0047 247.05);
+  --base-200: oklch(0.9288 0.006 247.66);
+  --base-300: oklch(0.8689 0.0069 249.03);
+  --base-400: oklch(0.704 0.0077 251.85);
+  --base-500: oklch(0.5539 0.0084 252.5);
+  --base-600: oklch(0.4459 0.0082 252.41);
+  --base-700: oklch(0.3719 0.0075 252.39);
+  --base-800: oklch(0.2786 0.0065 254.03);
+  --base-900: oklch(0.2081 0.006 255.71);
+  --base-950: oklch(0.1293 0.0056 256.58);
+  --base-1000: oklch(0.0786 0.0052 256.9);
 
-  --primary-50: oklch(0.9703 0.0119 11.06);
-  --primary-100: oklch(0.9423 0.0237 11.16);
-  --primary-200: oklch(0.893 0.046 8.75);
-  --primary-300: oklch(0.8111 0.0927 10.44);
-  --primary-400: oklch(0.7126 0.154 12.28);
-  --primary-500: oklch(0.6456 0.1947 15.22);
-  --primary-600: oklch(0.568 0.2002 16.51);
-  --primary-700: oklch(0.5146 0.1758 16);
-  --primary-800: oklch(0.4554 0.1489 12.95);
-  --primary-900: oklch(0.4102 0.1257 9.72);
-  --primary-950: oklch(0.2718 0.0833 11.52);
-  --primary-1000: oklch(0.1822 0.0558 12.7);
+  --primary-50: oklch(0.9666 0.0102 262.76);
+  --primary-100: oklch(0.9313 0.0212 263.5);
+  --primary-200: oklch(0.8767 0.0397 263.29);
+  --primary-300: oklch(0.7981 0.0705 262.36);
+  --primary-400: oklch(0.6913 0.1111 264.89);
+  --primary-500: oklch(0.5995 0.1432 267.78);
+  --primary-600: oklch(0.5299 0.1626 269.37);
+  --primary-700: oklch(0.4738 0.1554 270.2);
+  --primary-800: oklch(0.4121 0.1268 271.04);
+  --primary-900: oklch(0.3699 0.0933 271.59);
+  --primary-950: oklch(0.2706 0.0582 274.08);
+  --primary-1000: oklch(0.2062 0.0354 275.7);
 
-  --secondary-50: oklch(0.9666 0.0102 263.01);
-  --secondary-100: oklch(0.9314 0.0211 263.75);
-  --secondary-200: oklch(0.8765 0.0396 263.58);
-  --secondary-300: oklch(0.7977 0.0703 262.69);
-  --secondary-400: oklch(0.691 0.111 265.22);
-  --secondary-500: oklch(0.5984 0.143 268.03);
-  --secondary-600: oklch(0.5294 0.1623 269.57);
-  --secondary-700: oklch(0.4734 0.1549 270.38);
-  --secondary-800: oklch(0.4118 0.1264 271.21);
-  --secondary-900: oklch(0.3696 0.093 271.78);
-  --secondary-950: oklch(0.2702 0.058 274.28);
-  --secondary-1000: oklch(0.2058 0.0353 275.9);
+  --secondary-50: oklch(0.9672 0.0113 9.09);
+  --secondary-100: oklch(0.9402 0.0226 9.12);
+  --secondary-200: oklch(0.8916 0.0443 6.95);
+  --secondary-300: oklch(0.8107 0.0891 8.71);
+  --secondary-400: oklch(0.7122 0.148 10.61);
+  --secondary-500: oklch(0.6461 0.1863 13.46);
+  --secondary-600: oklch(0.6167 0.1917 14.96);
+  --secondary-700: oklch(0.5151 0.1686 14.66);
+  --secondary-800: oklch(0.4552 0.1427 11.88);
+  --secondary-900: oklch(0.4094 0.1202 8.92);
+  --secondary-950: oklch(0.2721 0.0801 10.7);
+  --secondary-1000: oklch(0.1832 0.054 11.86);
 
   --background: var(--color-white);
   --foreground: var(--base-800);
@@ -53,32 +53,32 @@
   --card-foreground: var(--base-800);
   --popover: var(--color-white);
   --popover-foreground: var(--base-800);
-  --primary: var(--primary-600);
+  --primary: var(--primary-500);
   --primary-foreground: var(--color-white);
-  --secondary: var(--secondary-400);
+  --secondary: var(--secondary-600);
   --secondary-foreground: var(--color-white);
-  --muted: var(--base-50);
+  --muted: var(--base-200);
   --muted-foreground: var(--base-600);
-  --accent: var(--base-50);
+  --accent: var(--base-100);
   --accent-foreground: var(--base-800);
   --destructive: oklch(0.577 0.245 27.325);
   --border: var(--base-200);
   --input: var(--base-300);
-  --ring: var(--primary-600);
-  --chart-1: oklch(0.5325 0.1679 262.29);
-  --chart-2: oklch(0.5823 0.219 20.15);
+  --ring: var(--primary-500);
+  --chart-1: var(--primary-500);
+  --chart-2: var(--secondary-600);
   --chart-3: oklch(0.8016 0.1705 73.27);
   --chart-4: oklch(0.7495 0.1664 156.1);
   --chart-5: oklch(0.5439 0.238 311);
-  --radius: 1rem;
+  --radius: 0.75rem;
   --sidebar: var(--base-100);
   --sidebar-foreground: var(--base-800);
-  --sidebar-primary: var(--primary-600);
-  --sidebar-primary-foreground: var(--color-white);
+  --sidebar-primary: var(--primary-500);
+  --sidebar-primary-foreground: var(--color-black);
   --sidebar-accent: var(--base-200);
   --sidebar-accent-foreground: var(--base-800);
   --sidebar-border: var(--base-200);
-  --sidebar-ring: var(--primary-600);
+  --sidebar-ring: var(--primary-500);
 }
 
 .dark {
@@ -282,11 +282,11 @@
   }
 
   *::selection {
-    @apply bg-zinc-900 text-white dark:bg-blue-600/40 dark:text-blue-300;
+    @apply bg-primary/70 text-white dark:bg-secondary/50 dark:text-white;
   }
 
   pre *::selection {
-    @apply bg-rose-500/50 text-white;
+    @apply bg-secondary text-white;
   }
 
   pre,
