--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -203,6 +203,7 @@
   --animate-accordion-down: accordion-down 0.2s ease-out;
   --animate-accordion-up: accordion-up 0.2s ease-out;
   --animate-spin: spin 1s linear infinite;
+  --animate-bounce-x: bounce-x 750ms infinite;
 
   @keyframes fade-in {
     0% {
@@ -260,6 +261,18 @@
     }
     to {
       height: 0;
+    }
+  }
+
+  @keyframes bounce-x {
+    0%,
+    100% {
+      transform: translateX(-25%);
+      animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+    }
+    50% {
+      transform: translateX(0);
+      animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
     }
   }
 }
