--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,31 +21,31 @@
   --base-950: oklch(0.1293 0.0056 256.58);
   --base-1000: oklch(0.0786 0.0052 256.9);
 
-  --primary-50: oklch(0.9761 0.0149 170);
-  --primary-100: oklch(0.9473 0.0403 167.77);
-  --primary-200: oklch(0.9034 0.0732 168.48);
-  --primary-300: oklch(0.8455 0.1105 169.26);
-  --primary-400: oklch(0.7666 0.1271 168.19);
-  --primary-500: oklch(0.697 0.1264 167.81);
-  --primary-600: oklch(0.5965 0.1075 168.94);
-  --primary-700: oklch(0.5085 0.0875 171.14);
-  --primary-800: oklch(0.4677 0.0706 172.58);
-  --primary-900: oklch(0.3799 0.0572 174.12);
-  --primary-950: oklch(0.2657 0.0388 176.86);
-  --primary-1000: oklch(0.1918 0.0268 178.03);
+  --primary-50: oklch(0.9756 0.0101 305.63);
+  --primary-100: oklch(0.9455 0.0227 304.86);
+  --primary-200: oklch(0.9006 0.0435 304.24);
+  --primary-300: oklch(0.8242 0.0826 304.03);
+  --primary-400: oklch(0.7118 0.1401 303.31);
+  --primary-500: oklch(0.6231 0.1843 301.85);
+  --primary-600: oklch(0.553 0.2015 300.61);
+  --primary-700: oklch(0.4951 0.1869 300.21);
+  --primary-800: oklch(0.4369 0.155 301.71);
+  --primary-900: oklch(0.3808 0.1254 302.92);
+  --primary-950: oklch(0.2895 0.1037 300.58);
+  --primary-1000: oklch(0.2224 0.0882 298.87);
 
-  --secondary-50: oklch(0.9797 0.0071 311.61);
-  --secondary-100: oklch(0.9499 0.0163 310.47);
-  --secondary-200: oklch(0.904 0.032 310.34);
-  --secondary-300: oklch(0.8299 0.0605 310.63);
-  --secondary-400: oklch(0.722 0.102 310.2);
-  --secondary-500: oklch(0.6386 0.1311 309.04);
-  --secondary-600: oklch(0.5276 0.1387 308.12);
-  --secondary-700: oklch(0.5024 0.1254 308.13);
-  --secondary-800: oklch(0.4423 0.1035 309.61);
-  --secondary-900: oklch(0.3871 0.0835 310.8);
-  --secondary-950: oklch(0.2921 0.0696 309.18);
-  --secondary-1000: oklch(0.2235 0.0598 307.97);
+  --secondary-50: oklch(0.9837 0.013 174.88);
+  --secondary-100: oklch(0.9531 0.0398 173.71);
+  --secondary-200: oklch(0.9089 0.0734 173.92);
+  --secondary-300: oklch(0.8516 0.1084 174.64);
+  --secondary-400: oklch(0.7725 0.1254 174.44);
+  --secondary-500: oklch(0.6654 0.1177 174.5);
+  --secondary-600: oklch(0.5986 0.0997 176.12);
+  --secondary-700: oklch(0.5101 0.0812 178.09);
+  --secondary-800: oklch(0.4354 0.0657 179.7);
+  --secondary-900: oklch(0.3833 0.0531 180.63);
+  --secondary-950: oklch(0.2715 0.0372 183.54);
+  --secondary-1000: oklch(0.1988 0.0268 184.48);
 
   --background: var(--color-white);
   --foreground: var(--base-800);
@@ -317,7 +317,7 @@
   }
 
   code {
-    @apply bg-muted rounded-md text-secondary px-1 py-0.5;
+    @apply bg-muted text-secondary rounded-md px-1 py-0.5;
   }
 
   pre,
