--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,9 @@
 @import "tailwindcss";
 
-@plugin 'tailwind-scrollbar';
-@plugin '@tailwindcss/forms';
-@plugin 'tailwindcss-animate';
-@plugin '@tailwindcss/typography';
+@plugin "tailwind-scrollbar";
+@plugin "@tailwindcss/forms";
+@plugin "tailwindcss-animate";
+@plugin "@tailwindcss/typography";
 
 @custom-variant dark (&:is(.dark *));
 
@@ -307,7 +307,6 @@
   body {
     @apply bg-background text-foreground flex min-h-screen flex-col font-sans antialiased;
   }
-
 
   pre *::selection {
     @apply bg-secondary text-white;
