--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -206,6 +206,11 @@
   --animate-bounce-x: bounce-x 750ms infinite;
   --animate-blob: blob 7s infinite;
 
+  --breakpoint-2xl: 96rem; /* 1536px */
+  --breakpoint-3xl: 120rem; /* 1920px */
+  --breakpoint-4xl: 144rem; /* 2304px */
+  --breakpoint-5xl: 160rem; /* 2560px */
+
   @keyframes slither {
     0% {
       transform: translateX(-100%);
@@ -403,5 +408,9 @@
 
   .animate-slither {
     animation: slither 2s infinite linear;
+  }
+
+  .grid-products {
+    @apply 3xl:grid-cols-7 4xl:grid-cols-8 5xl:grid-cols-9 grid grid-cols-2 gap-x-3 gap-y-10 sm:grid-cols-3 md:grid-cols-4 md:gap-x-4 md:gap-y-4 lg:grid-cols-4 xl:grid-cols-5 2xl:grid-cols-6;
   }
 }
