--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,31 +21,57 @@
   --base-950: oklch(0.1293 0.0056 256.58);
   --base-1000: oklch(0.0786 0.0052 256.9);
 
-  --primary-50: oklch(0.9756 0.0101 305.63);
-  --primary-100: oklch(0.9455 0.0227 304.86);
-  --primary-200: oklch(0.9006 0.0435 304.24);
-  --primary-300: oklch(0.8242 0.0826 304.03);
-  --primary-400: oklch(0.7118 0.1401 303.31);
-  --primary-500: oklch(0.6231 0.1843 301.85);
-  --primary-600: oklch(0.553 0.2015 300.61);
-  --primary-700: oklch(0.4951 0.1869 300.21);
-  --primary-800: oklch(0.4369 0.155 301.71);
-  --primary-900: oklch(0.3808 0.1254 302.92);
-  --primary-950: oklch(0.2895 0.1037 300.58);
-  --primary-1000: oklch(0.2224 0.0882 298.87);
+  --primary-50: oklch(0.9664 0.0099 256.43);
+  --primary-100: oklch(0.9295 0.0221 257.36);
+  --primary-200: oklch(0.879 0.0409 256.18);
+  --primary-300: oklch(0.8051 0.0727 254.17);
+  --primary-400: oklch(0.7026 0.1144 256.92);
+  --primary-500: oklch(0.6186 0.1481 261.6);
+  --primary-600: oklch(0.5422 0.1692 264.33);
+  --primary-700: oklch(0.5153 0.1664 265.68);
+  --primary-800: oklch(0.4211 0.1362 266.85);
+  --primary-900: oklch(0.3766 0.1 266.88);
+  --primary-950: oklch(0.279 0.0623 269.31);
+  --primary-1000: oklch(0.2157 0.0377 270.89);
 
-  --secondary-50: oklch(0.9837 0.013 174.88);
-  --secondary-100: oklch(0.9531 0.0398 173.71);
-  --secondary-200: oklch(0.9089 0.0734 173.92);
-  --secondary-300: oklch(0.8516 0.1084 174.64);
-  --secondary-400: oklch(0.7725 0.1254 174.44);
-  --secondary-500: oklch(0.6654 0.1177 174.5);
-  --secondary-600: oklch(0.5986 0.0997 176.12);
-  --secondary-700: oklch(0.5101 0.0812 178.09);
-  --secondary-800: oklch(0.4354 0.0657 179.7);
-  --secondary-900: oklch(0.3833 0.0531 180.63);
-  --secondary-950: oklch(0.2715 0.0372 183.54);
-  --secondary-1000: oklch(0.1988 0.0268 184.48);
+  --secondary-50: oklch(0.9731 0.0054 242.42);
+  --secondary-100: oklch(0.9435 0.0113 242.87);
+  --secondary-200: oklch(0.8938 0.0236 241.1);
+  --secondary-300: oklch(0.821 0.0441 239.96);
+  --secondary-400: oklch(0.7327 0.0653 242.45);
+  --secondary-500: oklch(0.6645 0.0742 244.58);
+  --secondary-600: oklch(0.5742 0.0752 247.36);
+  --secondary-700: oklch(0.4959 0.0684 248.37);
+  --secondary-800: oklch(0.4368 0.0561 249.48);
+  --secondary-900: oklch(0.3977 0.0437 250.18);
+  --secondary-950: oklch(0.2894 0.03 251.15);
+  --secondary-1000: oklch(0.2257 0.0209 252.66);
+
+  --tertiary-50: oklch(0.9756 0.0101 305.63);
+  --tertiary-100: oklch(0.9455 0.0227 304.86);
+  --tertiary-200: oklch(0.9006 0.0435 304.24);
+  --tertiary-300: oklch(0.8242 0.0826 304.03);
+  --tertiary-400: oklch(0.7118 0.1401 303.31);
+  --tertiary-500: oklch(0.6231 0.1843 301.85);
+  --tertiary-600: oklch(0.553 0.2015 300.61);
+  --tertiary-700: oklch(0.4951 0.1869 300.21);
+  --tertiary-800: oklch(0.4369 0.155 301.71);
+  --tertiary-900: oklch(0.3808 0.1254 302.92);
+  --tertiary-950: oklch(0.2895 0.1037 300.58);
+  --tertiary-1000: oklch(0.2224 0.0882 298.87);
+
+  --quaternary-50: oklch(0.9837 0.013 174.88);
+  --quaternary-100: oklch(0.9531 0.0398 173.71);
+  --quaternary-200: oklch(0.9089 0.0734 173.92);
+  --quaternary-300: oklch(0.8516 0.1084 174.64);
+  --quaternary-400: oklch(0.7725 0.1254 174.44);
+  --quaternary-500: oklch(0.6654 0.1177 174.5);
+  --quaternary-600: oklch(0.5986 0.0997 176.12);
+  --quaternary-700: oklch(0.5101 0.0812 178.09);
+  --quaternary-800: oklch(0.4354 0.0657 179.7);
+  --quaternary-900: oklch(0.3833 0.0531 180.63);
+  --quaternary-950: oklch(0.2715 0.0372 183.54);
+  --quaternary-1000: oklch(0.1988 0.0268 184.48);
 
   --background: var(--color-white);
   --foreground: var(--base-800);
@@ -62,6 +88,7 @@
   --accent: var(--base-100);
   --accent-foreground: var(--base-800);
   --destructive: oklch(0.577 0.245 27.325);
+  --success: var(--color-emerald-600);
   --border: var(--base-200);
   --input: var(--base-300);
   --ring: var(--primary-500);
@@ -97,6 +124,7 @@
   --accent: var(--base-900);
   --accent-foreground: var(--base-200);
   --destructive: oklch(0.5609 0.2257 24.91);
+  --success: var(--color-emerald-500);
   --border: var(--base-800);
   --input: var(--base-700);
   --ring: var(--primary-600);
@@ -179,6 +207,7 @@
   --color-input: var(--input);
   --color-border: var(--border);
   --color-destructive: var(--destructive);
+  --color-success: var(--success);
   --color-accent-foreground: var(--accent-foreground);
   --color-accent: var(--accent);
   --color-muted-foreground: var(--muted-foreground);
