feat: admin page dashboard style

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -439,3 +439,12 @@
     animation: slither 2s infinite linear;
   }
 }
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
