--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -380,7 +380,7 @@
   }
 
   code {
-    @apply bg-muted text-secondary rounded-md px-1 py-0.5;
+    @apply rounded-md bg-orange-100 px-1.5 py-0.5 text-orange-700 dark:bg-orange-600/30 dark:text-orange-200;
   }
 
   pre,
