--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,31 +21,31 @@
   --base-950: oklch(0.1493 0.0059 256.58);
   --base-1000: oklch(0.0786 0.0052 256.9);
 
-  --primary-50: oklch(0.9664 0.0099 256.43);
-  --primary-100: oklch(0.9295 0.0221 257.36);
-  --primary-200: oklch(0.879 0.0409 256.18);
-  --primary-300: oklch(0.8051 0.0727 254.17);
-  --primary-400: oklch(0.7026 0.1144 256.92);
-  --primary-500: oklch(0.6186 0.1481 261.6);
-  --primary-600: oklch(0.5422 0.1692 264.33);
-  --primary-700: oklch(0.5153 0.1664 265.68);
-  --primary-800: oklch(0.4211 0.1362 266.85);
-  --primary-900: oklch(0.3766 0.1 266.88);
-  --primary-950: oklch(0.279 0.0623 269.31);
-  --primary-1000: oklch(0.2157 0.0377 270.89);
+  --primary-50: oklch(0.9693 0.0112 251.24);
+  --primary-100: oklch(0.9339 0.025 252.08);
+  --primary-200: oklch(0.8843 0.0476 250.54);
+  --primary-300: oklch(0.8117 0.0858 248.54);
+  --primary-400: oklch(0.7138 0.1327 251.27);
+  --primary-500: oklch(0.6344 0.1663 255.61);
+  --primary-600: oklch(0.5827 0.185 258.6);
+  --primary-700: oklch(0.49 0.1801 259.96);
+  --primary-800: oklch(0.4272 0.1475 261.18);
+  --primary-900: oklch(0.3808 0.1096 261.29);
+  --primary-950: oklch(0.2837 0.0698 263.31);
+  --primary-1000: oklch(0.2205 0.0438 264.86);
 
-  --secondary-50: oklch(0.9857 0.0092 192.67);
-  --secondary-100: oklch(0.9558 0.027 192.96);
-  --secondary-200: oklch(0.9145 0.0496 193.07);
-  --secondary-300: oklch(0.8607 0.073 193.91);
-  --secondary-400: oklch(0.7834 0.0821 196.46);
-  --secondary-500: oklch(0.7097 0.0793 198.05);
-  --secondary-600: oklch(0.6046 0.0683 200.87);
-  --secondary-700: oklch(0.5154 0.0563 202.42);
-  --secondary-800: oklch(0.4291 0.0456 203.93);
-  --secondary-900: oklch(0.3918 0.0372 205.04);
-  --secondary-950: oklch(0.289 0.0285 207.29);
-  --secondary-1000: oklch(0.2223 0.0228 207.88);
+  --secondary-50: oklch(0.9716 0.0111 298.11);
+  --secondary-100: oklch(0.944 0.0218 298.35);
+  --secondary-200: oklch(0.8965 0.0425 297.3);
+  --secondary-300: oklch(0.8158 0.082 297.4);
+  --secondary-400: oklch(0.7008 0.1366 297.12);
+  --secondary-500: oklch(0.6123 0.1839 296.06);
+  --secondary-600: oklch(0.5461 0.2046 295.79);
+  --secondary-700: oklch(0.4926 0.1941 295.38);
+  --secondary-800: oklch(0.4339 0.1646 296.04);
+  --secondary-900: oklch(0.3804 0.1338 297.11);
+  --secondary-950: oklch(0.2855 0.1036 294.57);
+  --secondary-1000: oklch(0.221 0.0836 292.85);
 
   --tertiary-50: oklch(0.9756 0.0101 305.63);
   --tertiary-100: oklch(0.9455 0.0227 304.86);
@@ -239,6 +239,10 @@
   --breakpoint-3xl: 120rem; /* 1920px */
   --breakpoint-4xl: 144rem; /* 2304px */
   --breakpoint-5xl: 160rem; /* 2560px */
+
+  --container-8xl: 88rem;
+  --container-9xl: 96rem;
+  --container-10xl: 104rem;
 
   @keyframes slither {
     0% {
