--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -415,6 +415,8 @@
 
   html {
     @apply overflow-x-clip scroll-smooth;
+    scrollbar-width: auto;
+    scrollbar-color: auto;
   }
 
   body.drawer-open {
