fix: improve scrolling ux for drawers

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -429,6 +429,14 @@
     overscroll-behavior: none;
   }
 
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
   @keyframes rotate {
     from {
       transform: rotateY(-90deg);
